--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,2 +1,11 @@
-<!-- Vehicle Details Display -->
+<!-- Block: Content Heading -->
+<% if (title) { %>
+    <!-- Element within Block: content__heading -->
+    <div class="content__heading"><h1><%= title %></h1></div>
+<% } else {
+    // Block: Redirect
+    res.redirect('/') // Redirects the response object to the default index route, to deliver the home view.
+} %>
+
+<!-- Block: Vehicle Details Display -->
 <%- grid %>
