--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="/css/style.css" media="screen"> <!-- Main style sheet -->
     <link rel="stylesheet" href="/css/main.css" media="screen"> <!-- header, nav, and footer partials -->
     <link rel="stylesheet" href="/css/index.css" media="screen"> <!-- Index.ejs file -->
-    <link rel="stylesheet" href="/css/vehiclegrid.css" media="screen"> <!-- classification.ejs file -->
-    <link rel="stylesheet" href="/css/vehicledetail.css" media="screen"> <!-- detail.ejs file -->
-    <link rel="stylesheet" href="/css/mediaqueries.css" media="screen"> <!-- temporary file -->
+    <link rel="stylesheet" href="/css/classification.css" media="screen"> <!-- classification.ejs file -->
+    <link rel="stylesheet" href="/css/detail.css" media="screen"> <!-- detail.ejs file -->
 </head>
