--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,8 @@
-<header id="header--container">
-    <span class="header__title--container">
-        <a href="/" title="Return to home page" class="header__title--site-name">CSE Motors</a>
+<header class="header">
+    <span class="header__title">
+        <a href="/" title="Return to home page" class="header__title-link">CSE Motors</a>
     </span>
-    <div id="header__login--container">
-        <a title="Click to log in" href="/account/login" class="header__login--link">My Account</a>
+    <div class="header__login">
+        <a title="Click to log in" href="/account/login" class="header__login-link">My Account</a>
     </div>
 </header>
