--- a/public/css/classification.css
+++ b/public/css/classification.css
@@ -8,62 +8,56 @@
 /*------------------------------------------------------------------------------*/
 .vehicle-grid__ul {
     display: grid;
-    grid-template-columns: repeat(1, 1fr); /* One column for smaller screens */
+    grid-template-columns: repeat(2, auto);
 }
 
-.vehicle-grid__li {
+.vehicle-grid__item {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-#vehicle-grid__ul-style {
-    list-style-type: none;
-  }
-  
-.vehicle-grid__li {
     margin: 10px;
 }
-  
+
+/*.vehicle-grid-card*/
+
 .vehicle-grid-card__container {
-    box-shadow: 0px 10px 10px var(--card__drop-shadow-clr);
-    border-radius: 10px;
-    margin-bottom: 10px;
-    width: 200px;
+    width: 100%;
     height: 100%; 
-    /* Flexbox */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .vehicle-grid-card__image-container{
-    width: 100%;
-    height: 100%;
+    width: 100%; /* Ensure the image takes up the full width */
 }
 
 .vehicle-grid-card__image {
-    width: 100%;
-    border-radius: 10px 10px 0px 0px;
+    width: 100%; /* Ensure the image takes up the full width */
+    height: auto;
+    border-radius: 10px 10px 0 0;
 }  
 
 .vehicle-grid-card__text {
     padding: 8px;
+    margin-bottom: 10px;
+    line-height: 20px;
+
     /* Flex Box */
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-  }
-  
-  .vehicle-grid-card__title {
+}
+
+.vehicle-grid-card__link {
     font-size: medium;
     font-family: var(--font-family-openSans);
-    padding: 10px;
-    color: var(--title-clr);
-  }
+    color: var(--title-color);
+    text-decoration: none;
+}
 
-.content__heading {
-    padding: 10px;
+.vehicle-grid-card__link:hover {
+    color: var(--link-hover-color);
+}
+
+.vehicle-grid-card__price {
+    margin: 10px;
 }
