--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,25 +1,17 @@
-<!--
-    3 Sections 
-    Content Heading
-    Message
-    Inventory items display
--->
+<% // Block: 3 Sections - Content Heading, Message, Inventory items display %>
 
-
-<!-- Content Heading -->
+<% // Block: Content Heading %>
 <% if (title) { %>
-    <div class="content__heading"><h1><%= title %></h1></div>
-    <% } else {
-      res.redirect('/') // redirects the response object to the default index route, to deliver the home view.
-    } %>
+  <% // Element within Block: content__heading %>
+  <div class="content__heading"><h1><%= title %></h1></div>
+<% } else {
+  // Block: Redirect
+  res.redirect('/') // redirects the response object to the default index route, to deliver the home view.
+} %>
 
-
-
-<!-- Message Block -->
+<% // Block: Message %>
 <!-- # this comment mark disables the code below. Will later be replaced with - -->
 <%# messages() %>
 
-
-
-<!-- Inventory Items Display -->
+<% // Block: Inventory Items Display %>
 <%- grid %>
