--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,14 +3,21 @@
 <%- include('../partials/head') %>
 
 <body>
+    <!-- Block: body__wrapper -->
     <div id="body__wrapper">
+        <!-- Block: header -->
         <%- include('../partials/header') %>
+        
+        <!-- Block: navigation -->
         <%- include('../partials/navigation') %>
 
+        <!-- Block: main -->
         <main>
+            <!-- Element within Block: body -->
             <%- body %>
         </main>
 
+        <!-- Block: footer -->
         <%- include('../partials/footer') %>
     </div>
 </body>
