--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,8 @@
 let year = d.getFullYear() %>
 
 <% // Block: Footer %>
+
+<hr class="footer-line">
 <footer class="footer">
     <% // Element within Block: footer__copyright %>
     <p class="footer__copyright">&copy<%= year %>, CSE 340 App</p>
