--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,62 +3,34 @@
 /*------------------------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
-
 /*------------------------------------------------------------------------------*/
 /*                                Root                                          */
 /*------------------------------------------------------------------------------*/
 :root {
-  /* Margins */
-  --margin-default: 10px;
-  --margin-small: 10px;
-  --margin-medium: 10px;
-  --margin-large: 20px;
-
-  /* Button */
-  --primary-button-text-default-color: #ffffff;
-  --primary-button-text-hover-color: #1890FF;
-
-  --primary-button-bg-default-color: #1890FF;
-  --primary-button-bg-hover-color: #ffffff;
-  
-  --primary-button-border-color: #1890FF;
-
   /* Fonts */
   --font-family-catamaran: 'Catamaran', sans-serif;
   --font-family-openSans: 'Open Sans', sans-serif;
 
-  /* Font Colors */
-  --title-color: #272727;
-  --nav-color: #ffffff;
-  --nav-bg-color: #272727; 
-  --link-hover-color: #1890FF;
+  /* Colors */
+  --white-color: #ffffff;
+  --darker-white-color: #d7d7d7;
+  --gray-color: #272727;
+  --light-gray-color: #ccc;
+  --medium-gray-color: #555;
+  --medium-gray-2-color: #777; 
+  --blue-color: #1890FF;
+  --dark-blue-color: #0056b3;
+  
+  /* Shadows */
+  --light-shadow-color: rgba(255, 255, 255, 0.55);
+  --dark-shadow-color: rgba(0, 0, 0, 0.5); 
 
-  /* Card Drop Shadow */
-  --card-drop-shadow-color: rgba(0, 0, 0, 0.5);
-
-  /* Vehicle Grid Card */
-  --vehicle-grid-card-outline-color: #272727;
-
-  /* DMC Information Card */
-  --dmc-card-bg-color: rgba(255, 255, 255, 0.55);
-  --dmc-info-card-text-color: #1890FF;
-
-  /* Upgrade Card */
-  --upgrade-card-bg-color: #1890FF;
-  --upgrade-card-outline-color: #093966;
-
-  /* Footer */
-  --footer-bg-color: #272727;
-  --footer-text-color: #ffffff;
+  /* Sizes */
 }
 
-
-
 /*------------------------------------------------------------------------------*/
-/*                          Reset and General Styles                            */
+/*                                Common                                        */
 /*------------------------------------------------------------------------------*/
-
-/******* Change Box Model ***************/
 *,
 *:before,
 *:after {
@@ -73,42 +45,27 @@ img {
   object-fit:cover;
 }
 
-
-/*------------------------------------------------------------------------------*/
-/*                                Fonts                                         */
-/*------------------------------------------------------------------------------*/
-/* Header */
-.header__title-link,
-/* Nav */
-.navigation,
-/* Main */
-.title,
-.card__title,
-.section__title,
-.content__heading {
-  font-family: var(--font-family-catamaran);
+.footer-line {
+  border-top: .001px solid var(--gray-color);
 }
 
-/* Header */
-.header__login-link,
-/* Main */
-.content__ul,
-.list-item-wrapper__title,
-.btn,
-.vehicle-grid-card__price,
-/* Footer */
-.footer__copyright {
-  font-family: var(--font-family-openSans);
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh; /* Set minimum height to 100% of the viewport height */
+  display: flex;
+  flex-direction: column;
 }
 
-.footer__copyright {
-  font-size: smaller;
+.main {
+  flex: 1; /* Allow the main content to grow and take up remaining space */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-
-/*------------------------------------------------------------------------------*/
-/*                                Buttons                                       */
-/*------------------------------------------------------------------------------*/
 .btn {
   height: auto;
   width: auto;
@@ -129,7 +86,33 @@ img {
 }
 
 /*------------------------------------------------------------------------------*/
-/*                                Cards                                         */
+/*                                Fonts                                         */
+/*------------------------------------------------------------------------------*/
+/* Header */
+.header__title-link,
+.header__login-link,
+/* Nav */
+.navigation__item,
+/* Main */
+.title,
+.card__title,
+.section__title,
+.content__heading {
+  font-family: var(--font-family-catamaran);
+}
+
+/* Main */
+.content__ul,
+.list-item-wrapper__title,
+.btn,
+.vehicle-grid-card__price,
+/* Footer */
+.footer__copyright {
+  font-family: var(--font-family-openSans);
+}
+
+/*------------------------------------------------------------------------------*/
+/*                                cards                                         */
 /*------------------------------------------------------------------------------*/
 .card {
   border-radius: 10px;
@@ -137,17 +120,398 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /*box-shadow: -20px 10px 1px 1px var(--card-drop-shadow-color);*/
 }
 
 .grid-cards {
   height: 200px;
   width: 130px;
-  box-shadow: 0px 10px 10px var(--card-drop-shadow-color);
+  box-shadow: 0px 10px 10px var(--dark-shadow-color);
   border-radius: 10px;
 }
 
-.content__heading {
-  margin-left: 16px;
+/*------------------------------------------------------------------------------*/
+/*                            Header Styles                                     */
+/*------------------------------------------------------------------------------*/
+.header {
+  /* Flexbox */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  /* Styles */
+  height: 10vh;
+  padding: 10px;
+}
+
+.header__title-link {
+    text-decoration: none;
+    font-weight: 700;
+    color: var(--gray-color);
+}
+
+.header__login-link {
+  text-decoration: none;
+  font-weight: 400;
+  color: var(--gray-color);
+}
+
+.header__login-link:hover {
+  color: var(--blue-color);
+}
+
+
+/*------------------------------------------------------------------------------*/
+/*                            Navigation Styles                                 */
+/*------------------------------------------------------------------------------*/
+.navigation {
+  background-color: var(--gray-color);
+  width: 100%;
+  height: 100%;
+}
+
+.navigation__list {
+  margin: 0;
+  padding: 10px;
+  width: 100%;
+  list-style-type: none;
+
+  /* Flexbox */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.navigation__item {
+  display: inline-block;
+  color: var(--white-color);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.navigation__item:hover {
+  color: var(--blue-color);
+}
+
+/*------------------------------------------------------------------------------*/
+/*                              Footer Styles                                   */
+/*------------------------------------------------------------------------------*/
+.footer__copyright {
+  text-align: center;
+  padding: 10px;
+  font-size: smaller;
+}
+
+/*------------------------------------------------------------------------------*/
+/*                              Form Styles                                   */
+/*------------------------------------------------------------------------------*/
+.form-container {
+  margin-top: 12px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+
+/* Block: login-container */
+.login-container, 
+.registration-container {
+  background-color: var(--white-color);
+  border-radius: 8px;
+  box-shadow: 0 0 10px var(--dark-shadow-color);
+  overflow: hidden;
+  width: 350px;
+}
+
+/* Block: login-form */
+.login-form,
+.registration-form {
+  padding: 20px;
+}
+
+/* Block Element: login-form__container */
+.login-form__container,
+.registration-form__container {
+  padding: 20px;
+}
+
+/* Element within Block: form__label */
+.form__label {
+  display: block;
+  font-size: 14px;
+  margin-bottom: 8px;
+  color: var(--medium-gray-color);
+}
+
+/* Element within Block: form__input */
+.form__input {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid var(--light-gray-color);
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+/* Element within Block: form__hint */
+.form__hint {
+  font-size: 12px;
+  color: var(--medium-gray-2-color);
+  margin-bottom: 8px;
+  display: block;
+}
+
+/* Element within Block: btn */
+.form__button {
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 12px;
+  font-size: 16px;
+  color: var(--white-color);
+  background-color: var(--blue-color);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.form__button:hover {
+  background-color: var(--dark-blue-color);
+}
+
+/* Element within Block: form__register */
+.form__register {
+  text-align: center;
+  padding: 10px;
+}
+
+/* Element within Block: form__register-link */
+.form__register-link,
+.form__login-link {
+  color: var(--blue-color);
+  text-decoration: none;
+}
+
+.form__register-link:hover,
+.form__login-link:hover {
+  text-decoration: underline;
+}
+
+.login-form__field,
+.registration-form__field {
+  margin-bottom: 10px;
+}
+
+input:required:invalid, input:focus:invalid {
+  background-image: url(/images/invalid.png);
+  background-position: right top;
+  background-repeat: no-repeat;
+ }
+ 
+  input:required:valid {
+  background-image: url(/images/valid.png);
+  background-position: right top;
+  background-repeat: no-repeat;
+  }
+
+/*------------------------------------------------------------------------------*/
+/*                              Index.ejs Styles                                   */
+/*------------------------------------------------------------------------------*/
+
+
+.section {
+  position: relative;
+  margin: 20px;
+}
+
+.section__img-wrapper {
+  width: 100%; /* Ensure the image takes up the full width */
+  height: auto; /* Maintain aspect ratio */
+  z-index: 1; /* Set a lower z-index to keep the image below the card */
+}
+
+.card__title {
   font-size: medium;
 }
+
+
+.content-detail__ul {
+  font-size: small;
+  list-style-type: none;
+  margin-bottom: 2px;
+  font-weight: 700;
+}
+
+.content-reviews__ul {
+  margin-left: 30px;
+}
+
+.content-upgrades__ul {
+  list-style-type: none;
+  
+  /* Flexbox */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* Grid */
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(2, auto);
+  grid-template-areas:    'flux flame'
+                          'bumper hub';
+  row-gap: 10px;
+  column-gap: 20px;
+}
+
+.ul__list-item-flux {
+  grid-area: flux;
+}
+
+.ul__list-item-flame {
+  grid-area: flame;
+}
+
+.ul__list-item-bumper {
+  grid-area: bumper;
+}
+
+.ul__list-item-hub {
+  grid-area: hub;
+}
+
+.list-item-wrapper__title {
+  font-size: medium;
+  text-align: center;
+}
+
+/*
+.ul__list-item {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+*/
+
+.card--transparent {
+  width: 150px;
+  height: 130px;
+  color: var(--blue-color);
+  background-color: var(--light-shadow-color);
+  border: 2px solid var(--darker-white-color);
+  position: absolute;
+  z-index: 2;
+  padding: 20px; 
+  border-radius: 10px;
+}
+
+.card--blue {
+  width: 110px;
+  height: 110px;
+  background: var(--blue-color);
+  border: 2px solid var(--dark-blue-color);
+  box-shadow: 0px 4px 4px var(--dark-shadow-color);
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content__btn--default {
+  background-color: var(--blue-color);
+  border: 2px solid var(--blue-color);
+  color: var(--white-color);
+  margin-bottom: 4px;
+}
+
+.content__btn--default:hover {
+  background-color: var(--white-color);
+  border: 2px solid var(--blue-color);
+  color: var(--blue-color);
+  margin-bottom: 4px;
+}
+
+/*------------------------------------------------------------------------------*/
+/*                                  Inventory view(s)                           */
+/*------------------------------------------------------------------------------*/
+.vehicle-grid__ul {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+}
+
+.vehicle-grid__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+/*.vehicle-grid-card*/
+
+.vehicle-grid-card__container {
+  width: 100%;
+  height: 100%; 
+}
+
+.vehicle-grid-card__image-container{
+  width: 100%; /* Ensure the image takes up the full width */
+}
+
+.vehicle-grid-card__image {
+  width: 100%; /* Ensure the image takes up the full width */
+  height: auto;
+  border-radius: 10px 10px 0 0;
+}  
+
+.vehicle-grid-card__text {
+  padding: 8px;
+  margin-bottom: 10px;
+  line-height: 20px;
+
+  /* Flex Box */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.vehicle-grid-card__link {
+  font-size: medium;
+  font-family: var(--font-family-openSans);
+  color: var(--gray-color);
+  text-decoration: none;
+}
+
+.vehicle-grid-card__link:hover {
+  color: var(--blue-color);
+}
+
+.vehicle-grid-card__price {
+  margin: 10px;
+}
+
+/*------------------------------------------------------------------------------*/
+/*                                Detail Page                                   */
+/*------------------------------------------------------------------------------*/
+
+.vehicle-detail-card__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+
+.vehicle-detail-card__content{
+  display: flex;
+  flex-direction: column;
+}
+
+.vehicle-detail-card__image-container {
+  width: 100%;
+  height: 100%;
+}
+
+/* vehicle-detail-card__image */
+
+/* vehicle-detail-card__text */
