--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -1,11 +1,11 @@
-<!-- Block: Content Heading -->
-<% if (title) { %>
-    <!-- Element within Block: content__heading -->
-    <div class="content__heading"><h1><%= title %></h1></div>
-<% } else {
-    // Block: Redirect
-    res.redirect('/') // Redirects the response object to the default index route, to deliver the home view.
-} %>
+<div class="title-container">
+    <% if (title) { %>
+        <div class="content__heading"><h1><%= title %></h1></div>
+        <%- messages() %>
+        <% } else {
+            res.redirect('/')
+        } %>
+</div>
 
 <!-- Block: Vehicle Details Display -->
 <%- grid %>
