--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,5 +6,9 @@ let year = d.getFullYear() %>
 <hr class="footer-line">
 <footer class="footer">
     <% // Element within Block: footer__copyright %>
-    <p class="footer__copyright">&copy<%= year %>, CSE 340 App</p>
+    <p class="footer__copyright">
+        &copy<%= year %>, CSE 4340 App
+        <br>
+        <a href="/error" title="Link to intentional error page">Error Page</a>
+    </p>
 </footer> 
