--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,7 +97,8 @@ body {
 .title,
 .card__title,
 .section__title,
-.content__heading {
+.content__heading,
+legend {
   font-family: var(--font-family-catamaran);
 }
 
@@ -106,6 +107,8 @@ body {
 .list-item-wrapper__title,
 .btn,
 .vehicle-grid-card__price,
+.form__label,
+.form-footer-link,
 /* Footer */
 .footer__copyright {
   font-family: var(--font-family-openSans);
@@ -214,7 +217,9 @@ body {
 
 /* Block: login-container */
 .login-container, 
-.registration-container {
+.registration-container,
+.add-classification-container,
+.add-inventory-container  {
   background-color: var(--white-color);
   border-radius: 8px;
   box-shadow: 0 0 10px var(--dark-shadow-color);
@@ -224,13 +229,17 @@ body {
 
 /* Block: login-form */
 .login-form,
-.registration-form {
+.registration-form,
+.add-classification-form,
+.add-inventory-form {
   padding: 20px;
 }
 
 /* Block Element: login-form__container */
 .login-form__container,
-.registration-form__container {
+.registration-form__container,
+.add-classification-form__container,
+.add-inventory-form__container {
   padding: 20px;
 }
 
@@ -253,11 +262,18 @@ body {
 }
 
 /* Element within Block: form__hint */
+/*
 .form__hint {
   font-size: 12px;
   color: var(--medium-gray-2-color);
   margin-bottom: 8px;
   display: block;
+}*/
+
+.form__hint {
+  color: #ff0000; /* Set the text color to red or any other color you prefer */
+  font-size: 14px; /* Adjust the font size as needed */
+  font-style: italic; /* Apply italic style for emphasis */
 }
 
 /* Element within Block: btn */
@@ -280,7 +296,9 @@ body {
 /* Element within Block: form__register */
 .form__register {
   text-align: center;
-  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Element within Block: form__register-link */
@@ -296,7 +314,9 @@ body {
 }
 
 .login-form__field,
-.registration-form__field {
+.registration-form__field,
+.add-classification-form__field,
+.add-inventory-form__field {
   margin-bottom: 10px;
 }
 
@@ -306,11 +326,47 @@ input:required:invalid, input:focus:invalid {
   background-repeat: no-repeat;
  }
  
-  input:required:valid {
+input:required:valid {
   background-image: url(/images/valid.png);
   background-position: right top;
   background-repeat: no-repeat;
   }
+
+fieldset {
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  border: 1px solid var(--light-gray-color);
+}
+
+legend {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.management-button-container{
+  margin-left: 10px;
+}
+
+.management__button {
+  margin-bottom: 10px;
+  padding: 12px;
+  font-size: 16px;
+  color: var(--white-color);
+  background-color: var(--blue-color);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.management__button:hover {
+  background-color: var(--dark-blue-color);
+}
+
+.management-button-link {
+  color: var(--white-color);
+  text-decoration: none;
+}
 
 /*------------------------------------------------------------------------------*/
 /*                              Index.ejs Styles                                   */
