--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -11,33 +11,35 @@
     <!-- Block: login-container -->
     <div class="login-container form-container">
         <!-- Block: login-form -->
-        <form action="/account/login" method="post" class="login-form">
+        <form action="/account/login" method="POST" class="login-form">
             <!-- Block Element: login-form__container -->
             <div class="login-form__container">
+                <fieldset>
+                    <legend>Login Information</legend>
+                    <!-- Block Element: login-form__field -->
+                    <div class="login-form__field">
+                        <!-- Element within Block: form__label -->
+                        <label for="account_email" class="form__label">Email:</label>
+                        <!-- Element within Block: form__input -->
+                        <input type="text" placeholder="Enter your email" name="account_email" class="form__input" required>
+                    </div>
 
-                <!-- Block Element: login-form__field -->
-                <div class="login-form__field">
-                    <!-- Element within Block: form__label -->
-                    <label for="account_email" class="form__label">Email:</label>
-                    <!-- Element within Block: form__input -->
-                    <input type="text" placeholder="Enter your email" name="account_email" class="form__input" required>
-                </div>
-
-                <!-- Block Element: login-form__field -->
-                <div class="login-form__field">
-                    <!-- Element within Block: form__label -->
-                    <label for="account_password" class="form__label">Password:</label>
-                    <!-- Element within Block: form__hint -->
-                    <!--<span class="form__hint">Passwords must be at least 12 characters, contain at least 1 number, 1 capital letter, and 1 special character</span>-->
-                    <!-- Element within Block: form__input -->
-                    <input type="password" placeholder="Enter your password" name="account_password" id="accountPassword" class="form__input" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
-                </div>
+                    <!-- Block Element: login-form__field -->
+                    <div class="login-form__field">
+                        <!-- Element within Block: form__label -->
+                        <label for="account_password" class="form__label">Password:</label>
+                        <!-- Element within Block: form__hint -->
+                        <!--<span class="form__hint">Passwords must be at least 12 characters, contain at least 1 number, 1 capital letter, and 1 special character</span>-->
+                        <!-- Element within Block: form__input -->
+                        <input type="password" placeholder="Enter your password" name="account_password" id="accountPassword" class="form__input" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+                    </div>
+                </fieldset>
 
                 <!-- Element within Block: btn -->
                 <button type="submit" class="form__button">Login</button>
 
                 <!-- Element within Block: form__register -->
-                <span class="form__register">No account? <a href="/account/register" class="form__register-link">Sign up</a></span>
+                <span class="form__register form-footer-link"><div>No account? <a href="/account/register" class="form__register-link">Sign up</a></div></span>
             </div>
         </form>
     </div>
