--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,14 @@
   --medium-gray-2-color: #777; 
   --blue-color: #1890FF;
   --dark-blue-color: #0056b3;
-  
+  --green-color: #47d02b;
+  --dark-green-color: #32901f;
+  --red-color: #db2c2c;
+  --dark-red-color: #9a1f1f;
+  --white-table-bg-color: #f2f2f2;
+  --white-table-bg-color-2: #f9f9f9;
+  --white-table-border-color: #dddddd;
+
   /* Shadows */
   --light-shadow-color: rgba(255, 255, 255, 0.55);
   --dark-shadow-color: rgba(0, 0, 0, 0.5); 
@@ -98,7 +105,8 @@ body {
 .card__title,
 .section__title,
 .content__heading,
-legend {
+legend,
+.vehicle-name {
   font-family: var(--font-family-catamaran);
 }
 
@@ -109,6 +117,10 @@ legend {
 .vehicle-grid-card__price,
 .form__label,
 .form-footer-link,
+.vehicle,
+.modify,
+.delete,
+.inventoryManagmentParagraph,
 /* Footer */
 .footer__copyright {
   font-family: var(--font-family-openSans);
@@ -219,7 +231,8 @@ legend {
 .login-container, 
 .registration-container,
 .add-classification-container,
-.add-inventory-container  {
+.add-inventory-container,
+.modify-inventory-container  {
   background-color: var(--white-color);
   border-radius: 8px;
   box-shadow: 0 0 10px var(--dark-shadow-color);
@@ -231,7 +244,8 @@ legend {
 .login-form,
 .registration-form,
 .add-classification-form,
-.add-inventory-form {
+.add-inventory-form,
+.update-inventory-form {
   padding: 20px;
 }
 
@@ -239,7 +253,8 @@ legend {
 .login-form__container,
 .registration-form__container,
 .add-classification-form__container,
-.add-inventory-form__container {
+.add-inventory-form__container,
+.modify-inventory-form__container {
   padding: 20px;
 }
 
@@ -316,7 +331,8 @@ legend {
 .login-form__field,
 .registration-form__field,
 .add-classification-form__field,
-.add-inventory-form__field {
+.add-inventory-form__field,
+.modify-inventory-form__field {
   margin-bottom: 10px;
 }
 
@@ -345,7 +361,7 @@ legend {
 }
 
 .management-button-container{
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 .management__button {
@@ -571,3 +587,88 @@ legend {
 /* vehicle-detail-card__image */
 
 /* vehicle-detail-card__text */
+
+
+
+.inventoryManagement-container {
+    margin: 20px;
+}
+
+/* Style for the entire table */
+#invDisplay {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+/* Style for table header */
+#invDisplay th {
+  background-color: var(--white-table-bg-color);
+  border: 1px solid var(--white-table-border-color);
+  padding: 8px;
+  text-align: left;
+}
+
+/* Style for table data rows */
+#invDisplay td {
+  border: 1px solid var(--white-table-border-color);
+  padding: 8px;
+}
+
+/* Style for alternating row colors */
+#invDisplay tbody tr:nth-child(even) {
+  background-color: var(--white-table-bg-color-2);
+}
+
+.management-modify-button,
+.management-delete-button {
+  margin-bottom: 10px;
+  padding: 12px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.management-modify-button {
+  background-color: var(--green-color);
+}
+
+.management-modify-button:hover {
+  background-color: var(--dark-green-color);
+}
+
+.management-delete-button {
+  background-color: var(--red-color);
+}
+
+.management-delete-button:hover {
+  background-color: var(--dark-red-color);
+}
+
+.modify,
+.delete {
+  color: var(--white-color);
+  text-decoration: none;
+}
+
+select {
+  font-size: 14px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #333;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+select:hover,
+select:focus {
+  border-color: #007bff;
+}
+
+.inventoryManagmentParagraph {
+  margin-bottom: 10px;
+}
